complete sushi recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="sushi.html">Lasagna Recipe</a>
+    <a href="../sushi.html">Sushi Recipe</a>
 </body>
 </html>
