--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Sushi Recipe</h1>
-    <img src="../sushi.jpeg" alt="Tray of sushi">
+    <img src="../images/sushi.jpeg" alt="Tray of sushi">
     <p>Super easy and super delicious! Once you master the art of rolling, I guarantee you will never want to go out and pay top dollar for your sushi fix again! Depending on how big you roll your sushi, you may need more or less sushi rice. Serve with soy sauce and wasabi paste. </p>
     <h2>Ingredients</h2>
     <ul>
@@ -19,10 +19,18 @@
         <li>3 sheets nori, cut in half </li>
         <li>½ small ripe avocado, thinly sliced </li>
         <li>¼ English cucumber, cut into matchsticks </li>
-
-
     </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Rinse rice in a strainer until water runs clear.</li>
+        <li>Combine rice and water in a saucepan; bring to a boil. Reduce heat to low, cover, and cook until rice is tender and water is absorbed, about 20 minutes.</li>
+        <li>Combine rice vinegar, sugar, and salt in a small saucepan over low heat; stir until sugar is dissolved, 1 to 2 minutes. Pour over rice; stir until rice cools and looks dry.</li>
+        <li>Mix tuna, mayonnaise, chile oil, sesame oil, sriracha sauce, and green onion in a bowl with a fork, mashing to break up some of the chunks. Leave a few chunks intact for texture.</li>
+        <li>Cover a bamboo sushi rolling mat with plastic wrap. Lay 1 nori sheet, shiny-side down, on the mat. Spread a thin layer of rice over the nori. Layer avocado slices across the rice. Flip nori sheet so avocado is against the mat. Spread a generous layer of tuna mixture 3/4 of the way down the back of the nori; top with cucumber matchsticks.</li>
+        <li>Roll up sushi using the rolling mat, tucking in ends with the plastic wrap. Remove plastic wrap and place sushi roll on a plate. Repeat with remaining nori, rice, avocado, tuna mixture, and cucumber.</li>
+
+    </ol>
 
 
 
