add tonkatsu recipe, html same as sushi

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Sushi Recipe</title>
 </head>
+
 <body>
     <h1>Sushi Recipe</h1>
     <img src="../images/sushi.jpeg" alt="Tray of sushi">
@@ -29,10 +30,7 @@
         <li>Mix tuna, mayonnaise, chile oil, sesame oil, sriracha sauce, and green onion in a bowl with a fork, mashing to break up some of the chunks. Leave a few chunks intact for texture.</li>
         <li>Cover a bamboo sushi rolling mat with plastic wrap. Lay 1 nori sheet, shiny-side down, on the mat. Spread a thin layer of rice over the nori. Layer avocado slices across the rice. Flip nori sheet so avocado is against the mat. Spread a generous layer of tuna mixture 3/4 of the way down the back of the nori; top with cucumber matchsticks.</li>
         <li>Roll up sushi using the rolling mat, tucking in ends with the plastic wrap. Remove plastic wrap and place sushi roll on a plate. Repeat with remaining nori, rice, avocado, tuna mixture, and cucumber.</li>
-
     </ol>
-
-
 
 </body>
 </html>
