--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../sushi.html">Sushi Recipe</a>
+    <ul>
+        <li><a href="recipes/sushi.html">Sushi Recipe</a></li>
+        <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
+        <li><a href="recipes/tonkatsu.html">Tonkatsu Recipe</a></li>
+    </ul>
 </body>
 </html>
