--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="overlay">
 <head>
     <meta charset="UTF-8">
     <title>Ramen Recipe</title>
+    <link rel="stylesheet" href='../styles.css'>
 </head>
 
 <body>
     <h1>Ramen Recipe</h1>
-    <img src="../images/ramen.jpg" alt="Bowl of Ramen">
-    <p>This flavorful bowl of ramen in miso broth is full of delicious flavors that will definitely make your palate sing! If you've been dreaming of Japan, this is the perfect meal for you.</p>
+    <img src="../images/ramen.jpg" alt="Bowl of Ramen" class="center">
+    <p class="desc">This flavorful bowl of ramen in miso broth is full of delicious flavors that will definitely make your palate sing! If you've been dreaming of Japan, this is the perfect meal for you.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 (8 ounce) beef sirloin steak </li>
@@ -32,4 +34,5 @@
     </ol>
 
 </body>
+</div>
 </html>
