--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="overlay">
 <head>
     <meta charset="UTF-8">
     <title>Sushi Recipe</title>
+    <link rel="stylesheet" href='../styles.css'>
 </head>
 
 <body>
     <h1>Sushi Recipe</h1>
-    <img src="../images/sushi.jpeg" alt="Tray of sushi">
-    <p>Super easy and super delicious! Once you master the art of rolling, I guarantee you will never want to go out and pay top dollar for your sushi fix again! Depending on how big you roll your sushi, you may need more or less sushi rice. Serve with soy sauce and wasabi paste. </p>
+    <img src="../images/sushi.jpeg" alt="Tray of sushi" class="center">
+    <p class="desc">Super easy and super delicious! Once you master the art of rolling, I guarantee you will never want to go out and pay top dollar for your sushi fix again! Depending on how big you roll your sushi, you may need more or less sushi rice. Serve with soy sauce and wasabi paste.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>4 ounces sashimi-grade yellowfin tuna, cut into small chunks </li>
@@ -21,6 +23,7 @@
         <li>½ small ripe avocado, thinly sliced </li>
         <li>¼ English cucumber, cut into matchsticks </li>
     </ul>
+    
 
     <h2>Steps</h2>
     <ol>
@@ -33,6 +36,7 @@
     </ol>
 
 </body>
+</div>
 </html>
 
 
