--- a/recipes/tonkatsu.html
+++ b/recipes/tonkatsu.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="overlay">
 <head>
     <meta charset="UTF-8">
     <title>Tonkatsu Recipe</title>
+    <link rel="stylesheet" href='../styles.css'>
 </head>
 
 <body>
     <h1>Tonkatsu Recipe</h1>
-    <img src="../images/tonkatsu.jpg" alt="Plate of tonkatsu">
-    <p>Air-fried tonkatsu is crispy on the outside, tender and juicy on the inside. You can buy bottled sauce but this homemade version is simple to make and is far better. Serve over rice if desired.</p>
+    <img src="../images/tonkatsu.jpg" alt="Plate of tonkatsu" class="center">
+    <p class="desc">Air-fried tonkatsu is crispy on the outside, tender and juicy on the inside. You can buy bottled sauce but this homemade version is simple to make and is far better. Serve over rice if desired.</p>
     <h2>Ingredients</h2>
 
     <h3>Tonkatsu Sauce</h3>
@@ -40,6 +42,7 @@
     </ol>
 
 </body>
+</div>
 </html>
 
 
