--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="overlay">
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href='styles.css'>
 </head>
-<body>
+<body class="All">
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/sushi.html">Sushi Recipe</a></li>
-        <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
-        <li><a href="recipes/tonkatsu.html">Tonkatsu Recipe</a></li>
-    </ul>
+    <div class="List">
+     <a href="recipes/sushi.html"><button>Sushi Recipe</button></a>
+     <a href="recipes/ramen.html"><button>Ramen Recipe</button></a>
+     <a href="recipes/tonkatsu.html"><button>Tonkatsu Recipe</button></a>
+    </div>
 </body>
+</div>
 </html>
