Add home url, changee tonkatsu font color

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Sushi Recipe</h1>
+    <a href="../index.html">Home</a>
     <img src="../images/sushi.jpeg" alt="Tray of sushi" class="center">
     <p class="desc">Super easy and super delicious! Once you master the art of rolling, I guarantee you will never want to go out and pay top dollar for your sushi fix again! Depending on how big you roll your sushi, you may need more or less sushi rice. Serve with soy sauce and wasabi paste.</p>
     <h2>Ingredients</h2>
