--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Ramen Recipe</h1>
+    <a href="../index.html">Home</a>
     <img src="../images/ramen.jpg" alt="Bowl of Ramen" class="center">
     <p class="desc">This flavorful bowl of ramen in miso broth is full of delicious flavors that will definitely make your palate sing! If you've been dreaming of Japan, this is the perfect meal for you.</p>
     <h2>Ingredients</h2>
