--- a/recipes/tonkatsu.html
+++ b/recipes/tonkatsu.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Tonkatsu Recipe</h1>
+    <a href="../index.html">Home</a>
     <img src="../images/tonkatsu.jpg" alt="Plate of tonkatsu" class="center">
     <p class="desc">Air-fried tonkatsu is crispy on the outside, tender and juicy on the inside. You can buy bottled sauce but this homemade version is simple to make and is far better. Serve over rice if desired.</p>
     <h2>Ingredients</h2>
